@startuml

title __1720PROJECT's Class Diagram__\n

  package Game {
    class BlankTile {
    }
  }
  

  package Game {
    enum BlankVariants {
    }
  }
  

  package Game {
    class ControlledConveyor {
    }
  }
  

  package Game {
    enum Dir {
    }
  }
  

  package Game {
    class GridTileBase {
    }
  }
  

  package Game {
    class InvalidConveyorDirException {
    }
  }
  

  package Game {
    class Main {
    }
  }
  

  package Game {
    class SpriteAnimation {
    }
  }
  

  package Game {
    class StaticConveyor {
    }
  }
  

  package Game {
    class TileGrid {
    }
  }
  

  BlankTile -up-|> GridTileBase
  BlankTile o-- BlankVariants : variant
  ControlledConveyor -up-|> GridTileBase
  ControlledConveyor o-- Dir : currentDir
  GridTileBase o-- SpriteAnimation : anim
  InvalidConveyorDirException o-- Dir : invalidDir
  Main -up-|> Application
  SpriteAnimation -up-|> Transition
  StaticConveyor -up-|> GridTileBase
  StaticConveyor o-- Dir : direction
  TileGrid -up-|> GridPane


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
